--- a/src/css/App.css
+++ b/src/css/App.css
@@ -15,3 +15,19 @@
   width: 100%;
   height: 100vh;
 }
+
+.center-spinner {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.spinner {
+  width: 15vh !important;
+  height: 15vh !important;
+  border: .75em solid var(--primary-color) !important;
+  border-left-color: transparent !important;
+  border-right-color: transparent !important;
+}
